--- a/timeline/tk.html
+++ b/timeline/tk.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <div class="cont">
+    <!-- <div class="cont">
       <div class="image">
         <img src="time3.svg" alt="" />
       </div>
@@ -22,6 +22,9 @@
       <div id="b5">09:00A.M. <br />Opening Ceremony</div>
       <div id="b6">09:00A.M. <br />Opening Ceremony</div>
       <div id="b7">09:00A.M. <br />Opening Ceremony</div>
+    </div> -->
+    <div class="timeline">
+      <img src="timeline.png" />
     </div>
   </body>
 </html>
