--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
       </div>
     </div>
 
-
-
     <div class="third-div" id="tracks">
       <div class="tracktitle"><h1>Tracks</h1></div>
       <div class="sdgs">
@@ -86,6 +84,14 @@
           
       </div>
     </div>
+
+
+
+    <div class="timeline">
+      <img src="./assets/img/timeline.png" />
+    </div>
+
+
 
 
     <div class="fourth-div">
