--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link
+href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap"
+rel="stylesheet"
+/>
+<script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Sociovate</title>
   </head>
   <body>
@@ -15,8 +21,8 @@
           <p class="home"><a href="#nav">Home</a></p>  
           <p class="home"><a href="#whatis">What is sociovate?</a></p>  
           <p class="home"><a href="#tracks">Tracks</a></p>  
-          <p class="home"><a href="">Timeline</a></p>  
-          <p class="home"><a href="">Contact Us</a></p>
+          <p class="home"><a href="#timeline">Timeline</a></p>  
+          <p class="home"><a href="#contactus">Contact Us</a></p>
         </div>
         <button class="login-btn" onclick="location.href='./src/login.html'">Login</button>
         </div>
@@ -87,7 +93,7 @@
 
 
 
-    <div class="timeline">
+    <div class="timeline" id="timeline">
       <img src="./assets/img/timeline.png" />
     </div>
 
@@ -106,7 +112,7 @@
         <div class="containers">
           <img class="sdgimg" src="./assets/img/Pasted Graphic 8.png" alt="">
           <p class="chapt"><strong>IET<strong></p>
-          <p class="fullname">Institute of Engineering &<br>Technology</p>
+          <p class="fullname">The Institute of Engineering &<br>Technology</p>
         </div>
         <div class="containers">
           <img class="sdgimg" src="./assets/img/Pasted Graphic 7.png" alt="">
@@ -115,6 +121,33 @@
         </div>
       </div>
     </div>
+
+    <section id="contactus">
+      <div id="flexrow">
+        <div id="getintouch">
+          <h2>Get in touch with us</h2>
+        </div>
+        <div id="numbers">
+            
+          <div id="name1">
+            <p>Jatin Jakhar</p>
+            <p>1234567890</p>
+          </div>
+          <div id="name2">
+            <p>Umang Naulakha</p>
+            <p>0987654321</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="social-links">
+          <span>www.sociovate.co <hr> <i class="fa fa-instagram" style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">Instagram</b></i><i class="fa fa-twitter" style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">Twitter</b></i><i class="fa fa-linkedin"  style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">LinkedIn</b></i></span>
+        </div>
+        <div class="social-links">
+          <span>www.sociovate.co <hr> <i class="fa fa-instagram" style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">Instagram</b></i><i class="fa fa-twitter" style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">Twitter</b></i><i class="fa fa-linkedin"  style="margin: 0px 5px"><b style="margin: 0px 2px 0px 5px">LinkedIn</b></i></span>
+        </div>
+      </div>
+    </section>
     
 
 
