zig zac torture

--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@ rel="stylesheet"
         </div>
       </div>
     </div>
+
+
+
+    <!-- <div class="triangle-container">
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+      <div class="rounded-triangle"></div>
+  </div>
+   -->
+
+
     
 
     <div class="second-div" id="whatis">
